--- a/opus.cabal
+++ b/opus.cabal
@@ -26,7 +26,13 @@ library
                        Codec.Audio.Opus.Internal.Opus
   default-language:    Haskell2010
   build-tools:         hsc2hs
-  pkgconfig-depends:   opus
+  includes:
+      opus/opus.h
+      opus/opus_types.h
+      opus/opus_defines.h
+  extra-libraries:   opus
+  if !os(windows)
+    pkgconfig-depends: opus
   ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5,
                        exceptions,
