--- a/opus.cabal
+++ b/opus.cabal
@@ -1,5 +1,5 @@
 name:                opus
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            opus audio codec
 description:         haskell ffi binding to reference implementation of opus audio codec
 homepage:            https://github.com/alios/opus#readme
@@ -10,10 +10,10 @@ maintainer:          mbarenh@alios.org
 copyright:           BSD3
 category:            Web
 build-type:          Simple
-extra-source-files:  README.md
 cabal-version:       >=1.10
 extra-source-files:
     README.md
+    ChangeLog.md
 
 
 library
