Use pwsh syntax in CI (after finding out GH Actions defaults to pwsh)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,10 +50,11 @@ jobs:
 
       - name: Install libopus (Windows only)
         if: runner.os == 'Windows'
+        shell: pwsh
         run: |
-          set "PATH=C:\msys64\usr\bin;%PATH%"
+          $env:PATH = "C:\msys64\usr\bin;$env:PATH"
           pacman --noconfirm -S mingw64/mingw-w64-x86_64-opus mingw64/mingw-w64-x86_64-pkg-config
-          set "GITHUB_PATH=C:\msys64\mingw64\bin;%GITHUB_PATH%"
+          $env:GITHUB_PATH = "C:\msys64\mingw64\bin;$env:GITHUB_PATH"
 
       - name: Build the project
         run: cabal build
