--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,7 +54,9 @@ jobs:
         run: |
           $env:PATH = "C:\msys64\usr\bin;$env:PATH"
           pacman --noconfirm -S mingw64/mingw-w64-x86_64-opus mingw64/mingw-w64-x86_64-pkg-config
-          $env:GITHUB_PATH = "C:\msys64\mingw64\bin;$env:GITHUB_PATH"
+
+          # Add the mingw64 bin directory to the PATH so cabal can find pkg-config & opus
+          echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Build the project
         run: cabal build
