Fix `cabal test` not solving for test suite in CI
For some reason, it's not required for the solver to include the test
suite when running `cabal test`. This means that there is a chance that
`cabal test` can reach a local maxima of dependencies that bizzarely
doesn't contain the test suite itself. This is tracked in:

    https://github.com/haskell/cabal/issues/7883

The solution is either to add tests: True to cabal.project, or call
`cabal test` with the --enable-tests flag. This commit does the latter
in the CI, but eventually it'd be nice to get rid of the confusing flag.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,7 +59,13 @@ jobs:
           echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Build the project
-        run: cabal build
+        # Use --enable-tests until https://github.com/haskell/cabal/issues/7883
+        # is fixed, as otherwise build will solve dependencies without considering
+        # the test-suite dependencies, and then the tests will fail.
+        run: cabal build --enable-tests
 
       - name: Run the tests
-        run: cabal test
+        # Use --enable-tests until https://github.com/haskell/cabal/issues/7883
+        # is fixed, as otherwise cabal test can sometimes reach a local maxima
+        # of dependencies that bizarrely doesn't (!) include the test suite.
+        run: cabal test --enable-tests
