--- a/opus.cabal
+++ b/opus.cabal
@@ -71,10 +71,13 @@ test-suite opus-test
   default-language:    Haskell2010
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  other-modules:       OpusCompare
+  c-sources:           test/opus_compare.c
+  cc-options:          -Dmain=opus_compare_main
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base,
                        opus,
                        bytestring,
                        hspec,
                        microlens,
-                       process
+                       directory
