--- a/opus.cabal
+++ b/opus.cabal
@@ -40,6 +40,8 @@ tested-with:         GHC ==9.4.8
 extra-source-files:
     README.md
     ChangeLog.md
+    test/opus_compare_wrapper.c
+    test/opus_compare.c
 
 source-repository head
   type:     git
@@ -72,8 +74,8 @@ test-suite opus-test
   hs-source-dirs:
       test
   other-modules:       OpusCompare
-  c-sources:           test/opus_compare.c
-  cc-options:          -Dmain=opus_compare_main
+  c-sources:           test/opus_compare_wrapper.c
+  include-dirs:        test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base,
                        opus,
