Set up Opus test vectors within CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -73,6 +73,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.ghc }}-
 
+      - name: Download Opus test vectors
+        # This creates a folder called opus_newvectors with the test vectors
+        run: curl -L https://opus-codec.org/static/testvectors/opus_testvectors-rfc8251.tar.gz | tar -xz
+
       - name: Run the tests
         # Use --enable-tests until https://github.com/haskell/cabal/issues/7883
         # is fixed, as otherwise cabal test can sometimes reach a local maxima
