--- a/opus.cabal
+++ b/opus.cabal
@@ -1,3 +1,4 @@
+cabal-version:       3.0
 name:                opus
 version:             0.2.1.0
 synopsis:            Bindings to libopus for the Opus audio codec
@@ -28,14 +29,13 @@ description:
     Permission has been granted by the original author to publish this fork
     under the same BSD3 license.
 homepage:            https://github.com/yutotakano/opus
-license:             BSD3
+license:             BSD-3-Clause
 license-file:        LICENSE
 author:              Markus Barenhoff <mbarenh@alios.org>
 maintainer:          Yuto Takano <moa17stock@gmail.com>
 copyright:           Markus Barenhoff <mbarenh@alios.org>, Yuto Takano <moa17stock@gmail.com>, Haskell Opus Library Contributors
 category:            Codec
 build-type:          Simple
-cabal-version:       >=1.12
 tested-with:         GHC ==9.4.8
 extra-source-files:
     README.md
@@ -56,7 +56,7 @@ library
                        Codec.Audio.Opus.Types,
                        Codec.Audio.Opus.Internal.Opus
   default-language:    Haskell2010
-  build-tools:         hsc2hs
+  build-tool-depends:  hsc2hs:hsc2hs
   pkgconfig-depends:   opus
   ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5,
