--- a/opus.cabal
+++ b/opus.cabal
@@ -31,6 +31,7 @@ copyright:           Markus Barenhoff <mbarenh@alios.org>, Yuto Takano <moa17sto
 category:            Codec
 build-type:          Simple
 tested-with:         GHC ==9.4.8
+                   , GHC ==9.6.7
 extra-doc-files:
     README.md
     ChangeLog.md
